// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScopedStylesInDependency.vue Snapshot data-v ids remain 1`] = `
<div>
  <div class="vgt-wrap ">
    <div class="vgt-inner-wrap">
      <div class="vgt-fixed-header">
      </div>
      <div class="vgt-responsive" style="overflow: scroll-y; max-height: auto;">
        <table class="vgt-table bordered ">
          <thead data-v-2d1e3c02>
            <tr data-v-2d1e3c02>
              <th class="vgt-left-align sortable" data-v-2d1e3c02 style="min-width: auto; max-width: auto; width: auto;">
                <span data-v-2d1e3c02>Name</span>
              </th>
              <th class="vgt-left-align sortable" data-v-2d1e3c02 style="min-width: auto; max-width: auto; width: auto;">
                <span data-v-2d1e3c02>Favorite data-v-id=""</span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr class>
              <td class="vgt-left-align">
                <span>
                  Dave
                </span>
              </td>
              <td class="vgt-left-align">
                <span>
                  data-v-13ae5fa3=""
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`ScopedStylesInDependency.vue Snapshot data-v ids removed 1`] = `
<div>
  <div class="vgt-wrap ">
    <div class="vgt-inner-wrap">
      <div class="vgt-fixed-header">
      </div>
      <div class="vgt-responsive" style="overflow: scroll-y; max-height: auto;">
        <table class="vgt-table bordered ">
          <thead>
            <tr>
              <th class="vgt-left-align sortable" style="min-width: auto; max-width: auto; width: auto;">
                <span>Name</span>
              </th>
              <th class="vgt-left-align sortable" style="min-width: auto; max-width: auto; width: auto;">
                <span>Favorite data-v-id=""</span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr class>
              <td class="vgt-left-align">
                <span>
                  Dave
                </span>
              </td>
              <td class="vgt-left-align">
                <span>
                  data-v-13ae5fa3=""
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
